# ROS2_on_RaspPi_lecture01_Settings_OnOffSISO

./: .gitignore  README.md  README_JP.md
docs/: Addition_of_general_users.md  Addition_of_general_users_JP.md  Create_a_topic_message_for_a_state_of_a_switch.md  Creation_of_a_topic_message_for_a_state_of_a_switch.md  Creation_of_a_topic_message_for_a_state_of_a_switch_JP.md  Initial_settings_of_general_users.md  Initial_settings_of_general_users_JP.md  Installation_UbuntuServer.md  Installation_UbuntuServer_JP.md  Installation_of_ROS2_on_RaspberryPi.md  Installation_of_ROS2_on_RaspberryPi_JP.md  Installation_of_UbuntuServer_on_RaspberryPi.md  Installation_of_UbuntuServer_on_RaspberryPi_JP.md  Installation_of_pigpio_library.md  Installation_of_pigpio_library_JP.md  Publishing_and_Subscribing_on_plural_Raspberry_Pi.md  Publishing_and_Subscribing_on_plural_Raspberry_Pi_JP.md  Publishing_topic_by_pushing_releasing_a_switch.md  Publishing_topic_by_pushing_releasing_a_switch_JP.md  README_JP.md  Subscribing_topic_related_to_a_switch.md  Subscribing_topic_related_to_a_switch_JP.md  UbuntuServer_on_RaspberryPi_JP.md  Usage_of_pigpiod_in_cpp.md  Usage_of_pigpiod_in_cpp_JP.md
src/gpio_led_control_node/: CMakeLists.txt  package.xml
src/gpio_led_control_node/include/gpio_led_control_node/: gpio_led_control_component_node.hpp  visibility.h
src/gpio_led_control_node/src/: gpio_led_control_component_node.cpp
src/gpio_messages/: CMakeLists.txt  package.xml
src/gpio_messages/msg/: GpioState.msg
src/gpio_msgs/: CMakeLists.txt  package.xml
src/gpio_state_recognition_node/: CMakeLists.txt  package.xml
src/gpio_state_recognition_node/include/gpio_state_recognition_node/: pub_gpio_state_component_node.hpp  visibility.h
src/gpio_state_recognition_node/src/: pub_gpio_state_component_node.cpp  pub_gpio_state_main.cpp  pub_gpio_state_node.cpp  pub_gpio_state_node.hpp
src/gpio_state_recognition_nodes/: CMakeLists.txt  package.xml
src/gpio_state_recognition_nodes/include/gpio_state_recognition_nodes/: pub_gpio_state_component_node.hpp  visibility.h
src/gpio_state_recognition_nodes/src/: pub_gpio_state_component_node.cpp  pub_gpio_state_node.cpp  pub_gpio_state_node.hpp
src/gpio_state_recognition_target/: CMakeLists.txt  package.xml
src/gpio_state_recognition_target/src/: pub_gpio_state_recognition_target.cpp
src/pigpio_library_test/src/: on_off_siso.cpp  on_off_siso_with_callback.cpp
system_setting/: pigpiod.service
system_settings/: pigpiod.service
yaml/: 50-cloud-init.yaml
